# shadow_fiend

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.test  README.ko.md  README.md  README.zh.md  ROADMAP.md  docker-compose.test.yml  pyproject.toml  requirements.txt  setup.py  启动 shadow_fiend.command  安装 shadow_fiend.command
.github/workflows/: docker-publish.yml
docs/: TASK_v0.0.5_FINETUNE.md  mve_design.md  push_to_github.md  v0.0.1_retrospective.md
docs/product/: asr_selection_report_v0.0.2.md  distillation_plan_v0.0.5.md  high_quality_parallel_data_methods_v0.0.5.md  latency_research_v0.0.2.md  m2m100_finetuning_plan_v0.0.5.md  m2m100_latency_benchmark_v0.0.4.json  m2m100_latency_benchmark_v0.0.4.md  m2m100_latency_estimate_v0.0.4.md  market_research_translation_v0.0.4.md  parallel_data_exploration_v0.0.5.json  parallel_data_strategy_v0.0.5.md  prd_direct_translation_and_ui_v0.0.2.md  progress_report_2026-06-26.md  translation_latency_benchmark_v0.0.4.json  translation_latency_research_v0.0.4.md
scripts/: _download_sensevoice.py  generate_logo.py  one_click_test.sh  run.sh  setup.sh  test_asr.py  test_capture.py  test_in_docker.sh  test_runner.py  test_translation.py  test_ui.py
scripts/benchmark/: asr_benchmark.py  ctranslate2_latency_benchmark.py  generate_synthetic_audio.py  m2m100_latency_benchmark.py
scripts/data/: apply_quality_classifier.py  download_and_clean_ccmatrix.py  download_opus.py  explore_parallel_data.py  filter_parallel_data_domain.py  generate_final_report.py  (+8 more)
src/: main.py  pipeline.py  pipeline_streaming.py
tests/: e2e_latency_test.py  run_e2e_latency_benchmark.py  test_asr.py  test_audio_capture.py  test_translation.py  test_ui.py  test_vad.py
(+22 files in other folders)
